<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_file_explorer"
            android:checked="true"
            android:icon="@drawable/fe_ic_storage_black"
            android:title="@string/fe_title_files" />
        <item
            android:id="@+id/nav_app_info"
            android:icon="@drawable/fe_ic_info_black"
            android:title="@string/fe_title_app_info" />
        <item
            android:id="@+id/nav_phone_info"
            android:icon="@drawable/fe_ic_phone_android_black"
            android:title="@string/fe_title_phone_info" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/fe_ic_settings_black"
            android:title="@string/fe_action_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
